initializing gh-pages and files in clean state

--- a/genesis.html
+++ b/genesis.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="./styles.css">
+  <link rel="stylesheet" type="text/css" href="./assets/styles.css">
   <meta charset="UTF-8">
   <title>andydufrainegetsagemhammer</title>
 </head>
@@ -38,7 +38,7 @@
   <li>crossbow</li>
 </ul>
 
-<script src="./skywalker.js"></script>
+<script src="./assets/skywalker.js"></script>
 </body>
 
 </html>
