--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <h1>In a long time ago in a galaxy far far away...</h1>
   <h2>Chewbacca pubes are tumultuous</h2>
   <p>
-    In a 2005 interview, George Lucas described how the final
+    In a 2005 interview, Dustin Lucas described how the final
     Paraphrasing of the roll-up in Star Wars came about: "The crawl
     is such a hard thing because you have to be careful that
     you're not using too many words that people don't understand.
     It's like a poem. I showed the very first crawl to a bunch
     of friends of mine in the 1970s. It went on for six
-    paragraphs with four sentences each. Brian De Palma
+    paragraphs with four sentences each. Dustin De Palma
     was there, and he threw his hands up in the air and
     said, 'George, you're out of your mind! Let me sit
     down and write this for you.' He helped me chop it
